# SOMA_Foundation

./: .env.example  .gitignore  CLAUDE.md  SOMA_PROJECT_FOUNDATION.md  pyproject.toml  requirements.txt
data/: corpus.json  newsletters.json  paul_profile.json
docs/: PROJECT_STATUS.md  PROJECT_STATUS2.md  SPEC_WEEK1.md  SPEC_WEEK1b.md  SPEC_WEEK2.md  SPEC_WEEK3.md  SPEC_WEEK3b.md  SPEC_WEEK3c.md  SPEC_WEEK4.md  SPEC_WEEK5.md  architecture.md  biomarker-schema.md  damasio-mapping.md  scoring.md
soma/: __init__.py  soma_brain.py
soma/autoresearcher/: __init__.py  convergence.py  corpus_export.py  damasio.py  extractor.py  fetcher.py  llm.py  memory.py  query_gen.py  run.py  scorer.py  search_arms.py  seed.py  synthesizer.py
soma/benchmarks/: __init__.py  layer_benchmarks.py  memorial_salience.py
soma/brain/: __init__.py  affective_space.py  amygdala.py  embeddings.py  hippocampus.py  interoception.py  prefrontal.py  state_bus.py  thalamus.py  visual.py
soma/core/: __init__.py  affective_core.py
soma/memory/: __init__.py  consolidator.py  episodic_store.py
soma/proto_self/: __init__.py  anomaly_detector.py  article_review.py  artifact_filter.py  autobiographical_store.py  baseline_model.py  corpus_review.py  dashboard.py  db.py  feedback_logger.py  hrv.py  memory_writer.py  monitor.py  narrative_builder.py  polar_logger.py  polar_reader.py  probe_generator.py  probe_interface.py  (+10 more)
tests/: test_brain.py  test_cpap.py  test_db.py  test_proto_self.py  test_scorer_lss.py  test_server.py  test_week1b.py  test_week3.py  test_week3b.py  test_week3c.py  test_week4.py
(+15 files in other folders)
